<resources>
    <string name="app_name">Laborator2</string>
    <string name="an_doilea_numar">An doilea numar:</string>
    <string name="primul_numar">Primul numar:</string>
    <string name="rezultat">Rezultat:</string>
    <string name="calculeaza">Calculeaza</string>
    <string name="activity_1">Activity 1</string>
    <string name="activity_2">Activity 2</string>
    <string name="numere">Numere:</string>
    <string name="adunare">Adunare</string>
    <string name="scadere">Scadere</string>
</resources>